--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only --exit-child src/server.ts"
+    "start": "ts-node-dev --respawn --transpile-only --exit-child src/server.ts  --sequelize-cli db:migrate --sequelize-cli db:seed:all"
+
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.4",
     "morgan": "^1.10.0",
+    "sequelize-cli": "^6.6.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
@@ -18,7 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.8.0",
+    "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0",
     "zod": "^3.20.2"
