--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only --exit-child src/server.ts  --sequelize-cli db:migrate --sequelize-cli db:seed:all"
-
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/morgan": "^1.9.4",
+    "@types/node": "^20.8.2",
+    "@types/validator": "^13.11.2",
     "morgan": "^1.10.0",
     "sequelize-cli": "^6.6.1",
     "ts-node-dev": "^2.0.0",
@@ -22,7 +23,9 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.28.0",
+    "sequelize-typescript": "^2.1.5",
     "zod": "^3.20.2"
   }
 }
